--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <p class="lead "  >Spécialisé dans le développement front.</p>
       </div>
       <div class="col-md-5" >
-        <img class="featurette-image img-responsive center-block" src="/asset/Memoji.png" height="400px" width="400px" alt="Generic placeholder image">
+        <img class="featurette-image img-responsive center-block" src="Memoji.png" height="400px" width="400px" alt="Generic placeholder image">
 
       </div>
     </div>
