--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             
             <h2>Mon Portfolio</h2>
             <p>Projet personnel réalisé avec HTML, CSS, JavaScript et Bootstrap.</p>
-            <p><a class="btn btn-secondary" href="#">Visiter le site </a></p>
+            <p><a class="btn btn-secondary" href="https://victoraldebert.github.io/Mon-portfolio/">Visiter le site </a></p>
           </div><!-- /.col-lg-4 -->
 
 
