Ajout du bouton du site

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <div class="row featurette" id="bio">
       <div class="col-md-7">
         <h2 class="featurette-heading">Je m'appelle Victor Aldebert. <span class="text-muted" id="oui">Je suis étudiant en développement web et web mobile.</span></h2>
-        <p class="lead "  >Spécialisé dans le développement front.</p>
+        <p class="lead "  >Je suis actuellement étudiant à l'AFPA d'Olivet (45) en BAC +2.</p>
       </div>
       <div class="col-md-5" >
         <img class="featurette-image img-responsive center-block" src="Memoji.png" height="400px" width="400px" alt="Generic placeholder image">
@@ -106,7 +106,7 @@
     <div class="row featurette" id="competence">
       <img class="featurette-image pull-left">
       <div class="col-md-7 order-md-2">
-        <h2 class="featurette-heading">Mes technologies favorites. <span class="text-muted">Très simple.</span></h2>
+        <h2 class="featurette-heading">Mes technologies favorites. <span class="text-muted">Roulement de tambours.</span></h2>
         <p class="lead">
           Je développe des sites Web avec <b>HTML</b>, <b>CSS</b>, <b>JavaScript</b> et son framework <b>React</b>. J'ai des compétences dans l'utilisation de logiciels de conception comme <b>Figma</b> et <b>PhotoShop</b>. Je maîtrise aussi les <b>CMS</b> comme <b>Wordpress</b>.</p>
       </div>
@@ -119,7 +119,7 @@
 
     <div class="row featurette" id="projet">
       <div class="col-md-7">
-        <h2 class="featurette-heading">Mes projets. <span class="text-muted">  <br>Sur lesquels j'ai travaillé:</br></span></h2>
+        <h2 class="featurette-heading">Mes projets <span class="text-muted">  <br>Sur lesquels j'ai travaillé:</br></span></h2>
         <p class="lead">
         </p>
       </div>
@@ -130,7 +130,7 @@
     </div>
     
 
-    <hr class="featurette-dividerdeux">
+    <!-- <hr class="featurette-dividerdeux"> -->
 
 
         <!-----Les présentations des projets -->
@@ -142,6 +142,7 @@
             <h2>Gère ton flouze</h2>
             <p>Projet réalisé dans le cadre d'un hackathon de seulement 72h.</p>
             <p><a class="btn btn-secondary" href="https://github.com/Barret-Pierre/tyche_web">Visiter le GitHub</a></p>
+
           </div><!-- /.col-lg-4 -->
 
 
@@ -151,6 +152,7 @@
             <h2>Site de Tesla</h2>
             <p>Projet personnel réalisé en HTML, CSS et JavaScript Vanilla.</p>
             <p><a class="btn btn-secondary" href="https://github.com/victoraldebert/Site-de-Tesla">Visiter le GitHub </a></p>
+
           </div><!-- /.col-lg-4 -->
 
 
@@ -160,6 +162,8 @@
             <h2>Mon Portfolio</h2>
             <p>Projet personnel réalisé avec HTML, CSS, JavaScript et Bootstrap.</p>
             <p><a class="btn btn-secondary" href="https://victoraldebert.github.io/Mon-portfolio/">Visiter le site </a></p>
+            <p><a class="btn btn-secondary" href="https://github.com/victoraldebert/Mon-portfolio">Visiter le GitHub </a></p>
+
           </div><!-- /.col-lg-4 -->
 
 
