--- a/index.html
+++ b/index.html
@@ -143,6 +143,8 @@
             <h2>Gère ton flouze</h2>
             <p>Projet réalisé dans le cadre d'un hackathon de seulement 72h.</p>
             <p><a class="btn btn-secondary" href="https://github.com/Barret-Pierre/tyche_web">Visiter le GitHub</a></p>
+            <p><a class="btn btn-secondary" href="https://www.youtube.com/watch?v=jUacWOBXsM4&ab_channel=VictorAldebert">Voir la démo</a></p>
+
 
           </div><!-- /.col-lg-4 -->
 
