--- a/index.html
+++ b/index.html
@@ -94,6 +94,8 @@
       <div class="col-md-7">
         <h2 class="featurette-heading">Je m'appelle Victor Aldebert. <span class="text-muted" id="oui">Je suis étudiant en développement web et web mobile.</span></h2>
         <p class="lead "  >Je suis actuellement en formation à l'AFPA d'Olivet (45) en BAC +2.</p>
+
+        
       </div>
       <div class="col-md-5" >
         <img class="featurette-image img-responsive center-block" src="Memoji.png" height="400px" width="400px" alt="Generic placeholder image">
@@ -166,6 +168,7 @@
             <p>Projet personnel réalisé avec HTML, CSS, JavaScript et Bootstrap.</p>
             <p><a class="btn btn-secondary" href="https://github.com/victoraldebert/Mon-portfolio">Visiter le GitHub </a></p>
             <p><a class="btn btn-secondary" href="https://victoraldebert.github.io/Mon-portfolio/">Visiter le site </a></p>
+
             
 
           </div><!-- /.col-lg-4 -->
@@ -190,6 +193,8 @@
         <p class="lead "  >Je suis toujours ouvert à de nouvelles opportunités. </p>
         <p><a class="btn btn-secondary" href="https://github.com/victoraldebert">Mon GitHub </a></p>
         <p><a class="btn btn-secondary" href="https://www.linkedin.com/in/victoraldebert/">Mon Linkedin </a></p>
+        <p><a class="btn btn-secondary" href="CV Aldebert Victor.jpg" download>Mon CV</a></p>
+
 
 
       </div>
