--- a/index.html
+++ b/index.html
@@ -242,6 +242,7 @@
     <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
 
 
-      
+    <script src="https://unpkg.com/scrollreveal"></script>        <!----Scrollreveal-->
+    <script src="scroll.js"></script>
   </body>
 </html>
