Ajout déscription des projets

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             <img class="bd-placeholder-img rounded-circle" src="Rond portfolio.png" height="170" width="170px" alt="Generic placeholder image">
             
             <h2>Mon Portfolio</h2>
-            <p>Projet personnel réalisé avec HTML, CSS, JavaScript et Bootstrap.</p>
+            <p>Projet personnel réalisé avec HTML, CSS, JavaScript, Scrollreveal.js et Bootstrap.</p>
             <p><a class="btn btn-secondary" href="https://github.com/victoraldebert/Mon-portfolio">Visiter le GitHub </a></p>
             <p><a class="btn btn-secondary" href="https://victoraldebert.github.io/Mon-portfolio/">Visiter le site </a></p>
 
