Changement de couleur du divider

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
     <!-- START THE FEATURETTES -->
 
     <hr class="featurette-divider">
+    
 
     <div class="row featurette" id="bio">
       <div class="col-md-7">
@@ -130,10 +131,9 @@
 
       </div>
     </div>
-    <hr class="featurette-divider">
     
 
-    <!-- <hr class="featurette-dividerdeux"> -->
+    <hr class="featurette-dividerdeux">
 
 
         <!-----Les présentations des projets -->
