Rectification du CV

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
         <p class="lead "  >Je suis toujours ouvert à de nouvelles opportunités. </p>
         <p><a class="btn btn-secondary" href="https://github.com/victoraldebert">Mon GitHub </a></p>
         <p><a class="btn btn-secondary" href="https://www.linkedin.com/in/victoraldebert/">Mon Linkedin </a></p>
-        <p><a class="btn btn-secondary" href="CV Aldebert Victor.jpg" download>Mon CV</a></p>
+        <p><a class="btn btn-secondary" href="CV Victor Aldebert.jpg" download>Mon CV</a></p>
 
 
 
