--- a/index.html
+++ b/index.html
@@ -157,7 +157,8 @@
             <h2>Site de Tesla</h2>
             <p>Projet personnel réalisé en HTML, CSS et JavaScript Vanilla.</p>
             <p><a class="btn btn-secondary" href="https://github.com/victoraldebert/Site-de-Tesla">Visiter le GitHub </a></p>
-
+            <p><a class="btn btn-secondary" href="https://victoraldebert.github.io/Site-de-Tesla/">Visiter le site </a></p>
+            
           </div><!-- /.col-lg-4 -->
 
 
