--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
       </div>
     </div>
   </nav>
+  
 </header>
 
 <main>
@@ -114,7 +115,7 @@
           Je développe des sites Web avec <b>HTML</b>, <b>CSS</b>, <b>JQuery</b>, <b>JavaScript</b> et son framework <b>React</b>. J'ai des compétences dans l'utilisation de logiciels de conception comme <b>Figma</b> et <b>PhotoShop</b>. Je maîtrise aussi les <b>CMS</b> comme <b>Wordpress</b>.</p>
       </div>
       <div class="col-md-5 order-md-1">
-        <img href="#a" class="featurette-image img-responsive center-block" src="Technos.png" height="400px" width="550px" alt="Generic placeholder image">
+        <img href="#a" id="tech" class="featurette-image img-responsive center-block" src="Technos.png" alt="Generic placeholder image">
       </div>
     </div>
 
