Changement de cv

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
       <div class="col-md-7">
         <h2 class="featurette-heading">Où me contacter ? <span class="text-muted" >Suivez ces liens.</span></h2>
         <p class="lead "  >Je suis toujours ouvert à de nouvelles opportunités. </p>
-        <p><a class="btn btn-secondary" href="CV Victor Aldebert.jpg" download>Télécharger mon CV</a></p>
+        <p><a class="btn btn-secondary" href="/CV Victor.pdf" download>Télécharger mon CV</a></p>
         <p><a class="btn btn-secondary" href="https://github.com/victoraldebert">Mon GitHub </a></p>
         <p><a class="btn btn-secondary" href="https://www.linkedin.com/in/victoraldebert/">Mon Linkedin </a></p>
         <p><a class="btn btn-secondary" href="mailto:victoraldebertpro@gmail.com" download>M'envoyer un mail</a></p>
