--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       <div class="col-md-7 order-md-2">
         <h2 class="featurette-heading">Mes technologies favorites <span class="text-muted">, ma pratique au quotidien.</span></h2>
         <p class="lead">
-          Je développe des sites Web avec <b>HTML</b>, <b>CSS</b>, <b>JQuery</b>, <b>JavaScript</b> et son framework <b>React</b>. J'ai des compétences dans l'utilisation de logiciels de conception comme <b>Figma</b> et <b>PhotoShop</b>. Je maîtrise aussi les <b>CMS</b> comme <b>Wordpress</b>.</p>
+          Je développe des sites Web avec <b>HTML</b>, <b>CSS</b>, <b>JQuery</b>,<b>PHP</b>, <b>JavaScript</b> et son framework <b>React</b>. J'ai des compétences dans l'utilisation de logiciels de conception comme <b>Figma</b> et <b>PhotoShop</b>. Je maîtrise aussi les <b>CMS</b> comme <b>Wordpress</b>.</p>
       </div>
       <div class="col-md-5 order-md-1">
         <img href="#a" id="tech" class="featurette-image img-responsive center-block" src="Technos.png" alt="Generic placeholder image">
@@ -223,7 +223,7 @@
       <div class="col-md-7">
         <h2 class="featurette-heading">Où me contacter ? <span class="text-muted" >Suivez ces liens.</span></h2>
         <p class="lead "  >Je suis toujours ouvert à de nouvelles opportunités. </p>
-        <p><a class="btn btn-secondary" href="/CV Victor.pdf" download>Télécharger mon CV</a></p>
+        <p><a class="btn btn-secondary" href="CV-Victor.pdf" download>Télécharger mon CV</a></p>
         <p><a class="btn btn-secondary" href="https://github.com/victoraldebert">Mon GitHub </a></p>
         <p><a class="btn btn-secondary" href="https://www.linkedin.com/in/victoraldebert/">Mon Linkedin </a></p>
         <p><a class="btn btn-secondary" href="mailto:victoraldebertpro@gmail.com" download>M'envoyer un mail</a></p>
