Ajout du lien vers la verison anglaise

--- a/index.html
+++ b/index.html
@@ -225,8 +225,8 @@
         <p class="lead "  >Je suis toujours ouvert à de nouvelles opportunités. </p>
         <p><a class="btn btn-secondary" href="CV-Victor-Aldebert.pdf" download>Télécharger mon CV</a></p>
         <p><a class="btn btn-secondary" href="https://github.com/victoraldebert">Mon GitHub </a></p>
-        <p><a class="btn btn-secondary" href="https://www.linkedin.com/in/victoraldebert/">Mon Linkedin </a></p>
-        <p><a class="btn btn-secondary" href="mailto:victoraldebertpro@gmail.com" download>M'envoyer un mail</a></p>
+        <p><a class="btn btn-secondary-two" href="https://www.linkedin.com/in/victoraldebert/">Mon Linkedin </a></p>
+        <p><a class="btn btn-secondary-two" href="mailto:victoraldebertpro@gmail.com" download>M'envoyer un mail</a></p>
 
 
 
@@ -268,7 +268,7 @@
 
   <footer class="container">
     
-    <p>&copy; 2002–2022 Aldebert, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+    <p>&copy; 2002–2022 Aldebert. &middot; <a href="https://victoraldebert.github.io/My-portfolio/">Voir mon site en anglais</a> &middot;</p>
     
   </footer>
 </main>
