--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
 
     <div class="row featurette" id="bio">
       <div class="col-md-7">
-        <h2 class="featurette-heading">Je m'appelle Victor Aldebert. <span class="text-muted" id="oui">Je suis étudiant en développement web et web mobile.</span></h2>
-        <p class="lead "  >Je suis actuellement en formation à l'AFPA d'Olivet (45) en BAC +2.</p>
+        <h2 class="featurette-heading">Bonjour je suis Victor Aldebert.</h2>
+        <p class="lead "  >Je suis un développeur web et web mobile orienté front-end. J'ai un diplôme BAC +2 en Développement Web et Web mobile Full Stack.</p>
 
         
       </div>
