--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         </div><!-- /.col-lg-4 -->
        
           <div class="col-lg-4">
-            <img class="bd-placeholder-img rounded-circle" src="Rond portfolio.png" height="170" width="170px" alt="Generic placeholder image">
+            <img class="bd-placeholder-img rounded-circle" src="Rond-portfolio.png" height="170" width="170px" alt="Generic placeholder image">
             
             <h2>Mon portfolio</h2>
             <p>Projet personnel réalisé avec HTML, CSS, JavaScript, Scroll JS et Bootstrap.</p>
