--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         <div class="row">
 
           <div class="col-lg-4">
-            <img class="bd-placeholder-img rounded-circle" src="Rond-vetement.png" height="170" width="170px" alt="Generic placeholder image">
+            <img class="bd-placeholder-img rounded-circle" src="rond-vtmnt.png" height="170" width="170px" alt="Generic placeholder image">
             
             <h2>Site de vêtement</h2>
             <p>Projet personnel réalisé avec HTML, CSS, JavaScript et Scroll JS.</p>
