--- a/index.html
+++ b/index.html
@@ -139,12 +139,12 @@
         <div class="row">
 
           <div class="col-lg-4">
-            <img class="bd-placeholder-img rounded-circle" src="rond-vtmnt.png" height="170" width="170px" alt="Generic placeholder image">
+            <img class="bd-placeholder-img rounded-circle" src="Rond-qovery.svg" height="170" width="170px" alt="Generic placeholder image">
             
-            <h2>Site de vêtement</h2>
+            <h2>Qovery Engine</h2>
             <p>Projet personnel réalisé avec HTML, CSS, JavaScript et Scroll JS.</p>
-            <p><a class="btn btn-secondary" target="_blank" href="https://github.com/victoraldebert/Site-de-vetement">Visiter le GitHub </a></p>
-            <p><a class="btn btn-secondary" target="_blank" href="https://victoraldebert.github.io/Site-de-vetement/">Visiter le site </a></p>
+            <p><a class="btn btn-secondary" target="_blank" href="https://github.com/victoraldebert/Qovery-Engine">Visiter le GitHub </a></p>
+            <p><a class="btn btn-secondary" target="_blank" href="https://victoraldebert.github.io/Qovery-Engine/">Visiter le site </a></p>
 
           </div><!-- /.col-lg-4 -->
 
