--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Portfolio Victor Aldebert</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/carousel/">
-    <link rel="shortcut icon" href="publics/images/Logo VA.png VA.png">
+    <link rel="shortcut icon" href="publics/images/Logo VA.png">
     
 
 
